# src/routes/AuthRoutes.ts
@@ -10,5 +10,6 @@ const authController = new AuthController();
  */
 router.post("/register", authController.register);
 router.post("/login", authController.login);
+router.post("/logout", authController.logout);
 
 export default router;
